<resources>
    <string name="app_name">Agora-Prototype</string>

    <!-- strings used in the app-->
    <string name="skip">SKIP</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_quote">There is no such thing as a vote that doesnt matter. It all matters</string>
    <string name="welcome_or_via">Or Via</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="answer">Answer</string>
    <string name="signup_instruction">Fill in the details and create your account now</string>
    <string name="send_link">Send Link</string>
    <string name="home">Home</string>
    <string name="election">Elections</string>
    <string name="your_elections">Your Elections</string>
    <string name="total_elections">Total Elections</string>
    <string name="ten">10</string>
    <string name="sample_vs">Election 1</string>
    <string name="sample_end">Ends in 2 days</string>
    <string name="start">Start</string>
    <string name="description">Description</string>
    <string name="end">End</string>
    <string name="candidates">Candidates</string>
    <string name="options">Options</string>
    <string name="generate_voter_link">Generate Voter Link</string>
    <string name="voters">Voters</string>
    <string name="invite_voters">Invite Voters</string>
    <string name="result">Result</string>
    <string name="delete_election">Delete Election</string>
    <string name="recoil">Rec0iL</string>
    <string name="joel_email">joelmathewkoshy@gmail.com</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="about_agora">About Agora</string>
    <string name="report_a_bug">Report A Bug</string>
    <string name="share_agora">Share Agora with Others</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_election">Create Election</string>
    <string name="create_poll">Create Poll</string>
    <string name="election_name">Election Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_candidate">Add Candidate</string>
    <string name="select_algo">Select Voting Algorithm</string>
    <string name="no_description_algo">No description to show, please select a voting algorithm</string>
    <string name="more_options">More Options</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="get_real_time_updates">Get real-time updates</string>
    <string name="how_secret">How secret are your ballots?</string>
    <string name="ballots_are_completely_secret_and_never_shown_to_anyone">Ballots are completely secret and never shown to anyone</string>
    <string name="ballots_are_visible_only_to_me">Ballots are visible only to me</string>
    <string name="ballots_are_visible_to_everyone_with_access_to_the_election">Ballots are visible to everyone with access to the election</string>
    <string name="who_can_see_list_of_voters">Who can see the list of voters?</string>
    <string name="create">Create</string>
    <string name="everyone_with_access_to_the_election">Everyone with access to the election</string>
    <string name="only_me">Only me</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="two_step_authentication">Two Step Authentication</string>
    <string name="test_variable">Test</string>
    <string name="poll_name">Poll Name</string>
    <string name="about_agora_content_one">Agora vote is a voting platform where users can create elections and invite friends to cast their votes</string>
    <string name="about_agora_content_two">It supports a wide range of voting algorithms some of which are Majority, Egalitarian, Australian STV just to name a few</string>
    <string name="version">Version</string>
    <string name="version_count">1.0</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="twitter">Twitter</string>
    <string name="gitlab">Gitlab</string>
    <string name="gitter">Gitter</string>
    <string name="aossie">AOSSIE</string>
    <string name="developed_with_love">Developed ❤️ with by AOSSIE</string>
    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="finished">Finished</string>
    <string name="add_election">Add Election</string>

    <!-- Navigation Drawer strings -->
    <string name="nav_open">Drawer Open</string>
    <string name="nav_close">Drawer Close</string>
    <string name="ballot">Ballot</string>
    <string name="view_more_information">View more information</string>
    <string name="status">Status</string>

    <!-- security questions for sign up -->
    <string-array name="security_questions">
        <item>What was your childhood nickname?</item>
        <item>In what city or town was your first job?</item>
    </string-array>

    <!-- algorithm for creation of election -->
    <string-array name="algorithms">
        <item>Majority</item>
        <item>Egalitarian</item>
        <item>Australian STV</item>
    </string-array>
</resources>
