<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/white"
    tools:context=".createpoll.CreatePollFour">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pmore_options_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_options"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp" />

            <CheckBox
                android:id="@+id/check_invite_voters_poll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_voters"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:buttonTint="@color/agoraGreen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pmore_options_text" />

            <CheckBox
                android:id="@+id/check_real_time_updates_poll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_real_time_updates"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/agoraGreen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/check_invite_voters_poll" />

            <TextView
                android:id="@+id/phow_secret_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_secret"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/check_real_time_updates_poll"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp" />

            <RadioGroup
                android:id="@+id/secret_ballots_group_poll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phow_secret_text" >

                <RadioButton
                    android:id="@+id/completely_secret_poll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/agoraGreen"
                    android:text="@string/ballots_are_completely_secret_and_never_shown_to_anyone" />

                <RadioButton
                    android:id="@+id/visible_to_me_only_poll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/agoraGreen"
                    android:text="@string/ballots_are_visible_only_to_me" />

                <RadioButton
                    android:id="@+id/visible_all_poll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/agoraGreen"
                    android:text="@string/ballots_are_visible_to_everyone_with_access_to_the_election" />
            </RadioGroup>

            <TextView
                android:id="@+id/pwho_can_voters_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/who_can_see_list_of_voters"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/secret_ballots_group_poll"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp" />

            <RadioGroup
                android:id="@+id/who_can_see_voters_group_poll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pwho_can_voters_text" >

                <RadioButton
                    android:id="@+id/voter_visible_only_me_poll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/agoraGreen"
                    android:text="@string/only_me" />

                <RadioButton
                    android:id="@+id/voter_visible_with_access_poll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/agoraGreen"
                    android:text="@string/everyone_with_access_to_the_election" />
            </RadioGroup>

            <Button
                android:id="@+id/bt_prev4_poll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev"
                android:layout_marginTop="24dp"
                android:textColor="@color/agoraGreen"
                android:background="@drawable/agora_button2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bt_create4_poll"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/who_can_see_voters_group_poll" />

            <Button
                android:id="@+id/bt_create4_poll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textColor="@color/white"
                android:background="@drawable/agora_button"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bt_prev4_poll"
                app:layout_constraintTop_toBottomOf="@+id/who_can_see_voters_group_poll" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>