<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_profile_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/white"
    tools:context=".profileSetting.ProfileSettings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_setting_pic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/profile_setting_username"/>

            <EditText
                android:id="@+id/profile_setting_username"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/person"
                android:drawableRight="@drawable/do_not_touch"
                android:drawablePadding="8dp"
                android:ems="10"
                android:text="@string/recoil"
                android:inputType="textPersonName"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_setting_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/profile_setting_first_name"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_setting_username" />

            <EditText
                android:id="@+id/profile_setting_last_name"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/person"
                android:drawablePadding="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_setting_first_name"/>

            <EditText
                android:id="@+id/profile_setting_email"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:text="@string/joel_email"
                android:layout_marginTop="8dp"
                android:focusable="false"
                android:drawableRight="@drawable/do_not_touch"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_setting_last_name" />

            <Button
                android:id="@+id/bt_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/agora_button"
                android:text="@string/edit_profile"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_setting_email" />

            <EditText
                android:id="@+id/profile_setting_password"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/password_lock"
                android:drawablePadding="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_edit_profile"/>

            <EditText
                android:id="@+id/profile_setting_confirm_password"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/password_lock"
                android:drawablePadding="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPersonName"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_setting_password" />

            <Switch
                android:id="@+id/profile_setting_two_auth"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:buttonTint="@color/agoraGreen"
                android:textSize="16sp"
                android:text="@string/two_step_authentication"
                app:layout_constraintTop_toBottomOf="@+id/profile_setting_confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/bt_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/agora_button"
                android:text="@string/change_password"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_setting_two_auth" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>